Fixed 360 image block alignment
- Added custom data-align attribute with getEditWrapperProps
- Commented out align[left/right] CSS to avoid conflicts with CSS in WP core

--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -19,16 +19,16 @@
 
 .wp-block-algori-360-image-block-algori-360-image.alignleft {
 	/*rtl:ignore*/
-	float: left;
+	/*float: left;*/
 	/*rtl:ignore*/
-	margin-right: 1em;
+	/*margin-right: 1em;*/
 }
 
 .wp-block-algori-360-image-block-algori-360-image.alignright {
 	/*rtl:ignore*/
-	float: right;
+	/*float: right;*/
 	/*rtl:ignore*/
-	margin-left: 1em;
+	/*margin-left: 1em;*/
 }
 
 .wp-block-algori-360-image-block-algori-360-image.aligncenter {
